--- a/custom_components/glinet_mudi/translations/en.json
+++ b/custom_components/glinet_mudi/translations/en.json
@@ -2,27 +2,25 @@
   "config": {
     "step": {
       "user": {
-        "title": "Setup Nuki OTP",
-        "description": "Please enter your Nuki OTP configurations:",
+        "title": "Setup GL.iNet",
+        "description": "Please enter your GL.iNet credentials",
         "data": {
-          "api_token": "API Token",
-          "api_url": "API URL",
-          "otp_username": "OTP Username",
-          "nuki_name": "Nuki Name",
-          "otp_lifetime_hours": "OTP Lifetime (Hours)"
+          "router_url": "Router URL",
+          "router_username": "Router Username",
+          "router_password": "Router Password",
+          "router_name": "Router Name"
         }
       }
     },
     "error": {
-      "invalid_api_token": "API token missing",
-      "invalid_otp_username": "OTP username missing",
-      "invalid_nuki_name": "Nuki name missing",
-      "invalid_api_url": "API URL missing",
-      "invalid_otp_lifetime_hours": "OTP lifetime missing"
+      "invalid_router_url": "Router URL missing",
+      "invalid_router_username": "Router Username missing",
+      "invalid_router_password": "Router Password missing",
+      "invalid_router_name": "Router Name missing"
     },
     "create_entry": {
-      "default": "Setup Nuki OTP",
-      "title": "Nuki OTP"
+      "default": "Create GL.iNet entry",
+      "title": "GL.iNet"
     }
   }
 }
